--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^18.0.9",
     "axios": "^1.2.1",
     "jest": "^29.3.1",
+    "netlify-cli": "^12.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
